# kinova-gemini

./: .gitignore  GEMINI.md  README.md  architecture_plan.md  config.yaml
src/gemini_robotics/: package.xml  setup.cfg  setup.py
src/gemini_robotics/gemini_robotics/: gemini_brain_node.py  robot_controller_ros2.py  text_interface_node.py  vision_utils.py
src/kinova_bringup/: CMakeLists.txt  package.xml
src/kinova_bringup/launch/: robot.launch.py
src/kortex_controller/: CMakeLists.txt  package.xml
src/kortex_controller/include/kortex_controller/: controller.hpp
src/kortex_controller/launch/: controller.launch.py
src/kortex_controller/src/: controller.cpp
src/prompts/: system_prompt.txt
src/ros2_interfaces/: CMakeLists.txt  package.xml
src/ros2_interfaces/action/: GripperCommand.action  MoveToJoints.action  MoveToPose.action
src/ros2_interfaces/msg/: RobotState.msg
src/scripts/: gemini-er-example.py  robot_controller_ros2.py  visualization_utils.py
